# DiscordBot

./: .dockerignore  .env.example  .replit  8443端口证书说明.md  AI_PROMPT_TEMPLATE_UPDATE.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_SIMPLE.md  DEPLOYMENT_TESTING_GUIDE.md  Dockerfile  ENHANCED_AI_PROMPT_UPDATE_SUMMARY.md  ENHANCED_RATING_SYSTEM_GUIDE.md  MANUAL_EXEMPT_GUIDE.md  README.md  REPORT_CACHE_IMPLEMENTATION.md  REPORT_CHANNEL_SETUP.md  TRADINGVIEW_WEBHOOK_TEST_GUIDE.md  TRADING_ANALYSIS_FORMAT_UPDATE.md  UPDATED_RATING_LOGIC_SUMMARY.md  VPS_AUTO_UPDATE_GUIDE.md  VPS_DATABASE_MIGRATION_GUIDE.md  VPS_DEPLOYMENT_FINAL_SUMMARY.md  VPS_DEPLOYMENT_GUIDE.md  VPS_DEPLOY_COMMANDS.md  VPS_DEPLOY_TODAY_UPDATE.md  VPS_UNLIMITED_DEPLOYMENT_GUIDE.md  VPS_UPDATE_GUIDE.md  api_server.py  api_status_check.md  app.py  bot.py  channel_behavior_guide.md  channel_cleaner.py  chart_analysis_service.py  chart_image_analysis_guide.md  chart_service.py  check-status.sh  config.py  daily_logs_guide.md  (+72 more)
attached_assets/: Pasted--PMA-switch-safeStr-data-pmaText-case-PMA-Strong-Bullish-signals-push-PMA-b-1755290280949_1755290280950.txt  Pasted--PMA-switch-safeStr-data-pmaText-case-PMA-Strong-Bullish-signals-push-PMA-br-1755294439387_1755294439389.txt  Pasted--content-parts-text--1755292655602_1755292655602.txt  Pasted--env-DATABASE-URL-env-status-healthy--1755011283640_1755011283641.txt  Pasted--username-embeds-title-TSLA-co-1755293906213_1755293906214.txt  content-1755289268288.md
daily_logs/: requests_2025-08-12.json  requests_2025-08-15.json
(+35 files in other folders)
