[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.62.0",
    "discord-py>=2.5.2",
    "flask>=3.1.1",
    "google-genai>=1.30.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "sift-stack-py>=0.8.3",
    "sqlalchemy>=2.0.43",
]
